[package]
name = "solc-align"
version = "0.1.0"
edition = "2021"
description = "Solidity struct data alignment tool mainly for reduce calldata size"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }

[profile.dev]
panic = "unwind"
overflow-checks = false
debug = false

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "unwind"
overflow-checks = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
int_plus_one = "allow"
needless_range_loop = "allow"